[gd_scene load_steps=11 format=2]

[ext_resource path="res://textoexplicativo.tres" type="DynamicFont" id=1]
[ext_resource path="res://desafios_escenas/desafio1_correcto.gd" type="Script" id=2]
[ext_resource path="res://Sprites/evaporacion/incorrect.png" type="Texture" id=3]
[ext_resource path="res://Sprites/evaporacion/termometro.png" type="Texture" id=4]
[ext_resource path="res://Sprites/viento.png" type="Texture" id=5]
[ext_resource path="res://Sprites/nube.png" type="Texture" id=6]
[ext_resource path="res://button_normal_style.tres" type="StyleBox" id=7]
[ext_resource path="res://button_hover_style.tres" type="StyleBox" id=8]
[ext_resource path="res://Sprites/fondoCeleste.png" type="Texture" id=9]
[ext_resource path="res://buttonfont.tres" type="DynamicFont" id=10]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 6 )
texture = ExtResource( 9 )

[node name="tituloLabel" type="Label" parent="."]
margin_top = 30.0
margin_right = 1024.0
margin_bottom = 59.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "INCORRECTO"
align = 1

[node name="Sprite" type="Sprite" parent="tituloLabel"]
position = Vector2( 413, 7 )
scale = Vector2( 0.195312, 0.191406 )
texture = ExtResource( 3 )

[node name="temperaturaContainer" type="Area2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="temperaturaContainer"]
position = Vector2( 107, 120 )
scale = Vector2( 0.276433, 0.255916 )
texture = ExtResource( 4 )

[node name="temperaturaLabel" type="Label" parent="temperaturaContainer"]
margin_left = 180.0
margin_top = 80.0
margin_right = 984.0
margin_bottom = 190.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "La temperatura puede variar en funcion de la altura, y esto puede afectar a las precipitaciones. 
¿Como debe ser la temperatura para que el agua se convierta en hielo? 
¿Debe ser la temperatura igual en todo el area de la nube?
"
autowrap = true

[node name="vientoVeritcalContainer" type="Area2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="vientoVeritcalContainer"]
position = Vector2( 107, 120 )
rotation = 1.5708
scale = Vector2( 0.0358161, 0.0670196 )
texture = ExtResource( 5 )

[node name="vientoVerticalLabel" type="Label" parent="vientoVeritcalContainer"]
margin_left = 180.0
margin_top = 80.0
margin_right = 984.0
margin_bottom = 156.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "¿Qué debe suceder con las gotas formadas dentro de una nube para que se genere granizo? 
¿De que manera el una rafaga de viento ascendente influye en las mismas?"
autowrap = true

[node name="nubeContainer" type="Area2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="nubeContainer"]
position = Vector2( 97, 120 )
scale = Vector2( 0.235596, 0.20256 )
texture = ExtResource( 6 )

[node name="nubeLabel" type="Label" parent="nubeContainer"]
margin_left = 180.0
margin_top = 80.0
margin_right = 984.0
margin_bottom = 156.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "De los factores necesarios para la generacion de granizo ¿Cuales pueden ser influenciados por la forma de la nube? 
¿Que forma deberia tomar la nube para que esos factores se vean potenciados?"
autowrap = true

[node name="vientoHorizontalContainer" type="Area2D" parent="."]
visible = false

[node name="vientoHorizontalLabel" type="Label" parent="vientoHorizontalContainer"]
margin_left = 180.0
margin_top = 80.0
margin_right = 984.0
margin_bottom = 156.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "¿En que afecta una rafaga de viento horizontal a una nube? ¿Como es el terreno en la situacion presentada?
 ¿Afecta factores para la generacion de granizo en el caso planteado? "
autowrap = true

[node name="Sprite" type="Sprite" parent="vientoHorizontalContainer"]
position = Vector2( 103, 120 )
scale = Vector2( 0.053748, 0.0678607 )
texture = ExtResource( 5 )

[node name="menuprincipal" type="Button" parent="."]
margin_left = 40.0
margin_top = 540.0
margin_right = 240.0
margin_bottom = 570.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "Volver al menú principal"

[node name="aGuia" type="Button" parent="."]
margin_left = 544.0
margin_top = 540.0
margin_right = 744.0
margin_bottom = 570.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "Ir a la guia"

[node name="reintentarButton" type="Button" parent="."]
margin_left = 784.0
margin_top = 540.0
margin_right = 984.0
margin_bottom = 570.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "Reintentar desafio"

[connection signal="pressed" from="menuprincipal" to="." method="_on_menuprincipal_pressed"]
[connection signal="pressed" from="aGuia" to="." method="_on_aGuia_pressed"]
[connection signal="pressed" from="reintentarButton" to="." method="_on_Button_pressed"]
